<resources>
    <string name="app_name">OnlineMarket</string>
    <string name="internet_is_disconnected">خطا در اتصال به اینترنت …</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="home">خانه</string>
    <string name="shopping_bag">سبد خرید</string>
    <string name="profile">نمایه من</string>
    <string name="query_hint">جستجو</string>
    <string name="text_view_sum_price_shopping_bag">مجموع</string>

    <string name="home_page">خانه</string>
    <string name="category">دسته بندی ها</string>

    <string name="recent_products">جدیدترین ها</string>
    <string name="most_visited_products">پربازدیدترین ها</string>
    <string name="top_rated_products">محبوب ترین ها</string>

    <string name="product_price">قیمت:</string>
    <string name="add_bag">افزودن به سبد خرید</string>
    <string name="product_name">نام کالا</string>
    <string name="product_description">مشخصات</string>
    <string name="category_name">دسته کالا</string>
    <string name="search_query">دسته یا محصول </string>

    <string name="delete_card_item">حذف </string>
    <string name="count">تعداد </string>
    <string name="final_price">قیمت نهایی </string>
    <string name="toman">  تومان</string>
    <string name="final_sale">جمع کل خرید</string>
    <string name="item_sale">جمع خرید محصول</string>
    <string name="final_shop">ادامه فرآیند خرید</string>
    <string name="offer_product">پیشنهاد شگفت انگیز</string>
    <string name="not_exist_user">شما هنوز حساب کاربری ندارید</string>
    <string name="first_enter_your_notif_time">ابتدا زمان مورد نظر خود را وارد کنید</string>


    <string name="visit_all">مشاهده همه</string>
    <string name="sorting">مرتب سازی</string>
    <string name="popularity">پر بازدیدترین</string>
    <string name="high_to_low">قیمت از زیاد به کم</string>
    <string name="low_to_high">قیمت از کم به زیاد</string>

    <string name="newest">جدیدترین</string>

    <string name="filtering">فیلتر کردن</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_favorite">لیست مورد علاقه</string>
    <string name="text_view_comment">نقد و نظرات</string>
    <string name="text_view_addresses">آدرس ها</string>
    <string name="text_view_user_account_info">اطلاعات حساب کاربری</string>
    <string name="text_view_user_orders">سفارش های من</string>
    <string name="please_complete_comment">لطفا نظر خود را کامل تر بیان کنید</string>
    <string name="search_view_search_in_online_store">جست و جو در فروشگاه</string>
    <string name="this_product_is_added_to_shopping_bag"> به سبد خرید اضافه شد </string>
    <string name="please_fist_sign_up">لطفا ابتدا حساب کاربری خود را ایجاد نمایید </string>
    <string name="text_view_minus">-</string>
    <string name="text_view_plus">+</string>
    <string name="text_view_radio_button_one">1</string>
    <string name="text_view_radio_button_two">2</string>
    <string name="text_view_radio_button_three">3</string>
    <string name="text_view_radio_button_four">4</string>
    <string name="text_view_radio_button_five">5</string>
    <string name="button_post_comment">ثبت دیدگاه</string>
    <string name="first_enter_your_email">ابتدا ایمیل خود را وارد کنید</string>
    <string name="text_view_empty_shopping_bag">سبد خرید شما خالی است</string>

    <string name="channel_id">onlineStore_channel_id</string>
    <string name="channel_name">OnlineStore Channel</string>
    <string name="channel_description">This is notification channel for online market</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_product_title">The OnlineMarket has a new product: \n</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_view_add_address">اضافه کردن آدرس جدید</string>
    <string name="location_not_found_message">موقعیت مکانی شما غیر فعال است . آیا مایلید آن را فعال کنید ؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="why_need_location_permission">دسترسی به موقعیت مکانی به یافتن آدرس  شما برای ارسال محصول کمک میکند </string>
    <string name="ok">متوجه شدم</string>
    <string name="complete_address_detail">لطفا ابتدا جزییات آدرس را کامل  کنید</string>


</resources>