<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/main_layout_card_item"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_margin="10dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view_card_item"
            android:layout_width="135dp"
            android:layout_height="160dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/online_market_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_View_name_card_item"
            style="@style/GeneralTextStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/image_view_card_item"
            android:gravity="right"
            android:lines="3"
            tools:text="@string/product_description" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_price_card_item"
            style="@style/GeneralTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_View_name_card_item"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/image_view_card_item"
            android:gravity="left" />

        <RelativeLayout
            android:id="@+id/layout_minus_add_count"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_card_item"
            android:layout_alignParentRight="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_count_card_item"
                style="@style/PartialTextStyle"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textColor="@color/red_22"
                tools:text="5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_minus_card_item"
                style="@style/PartialTextStyle"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/text_view_minus"
                android:textColor="@color/red_22"
                android:textSize="24sp"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_View_plus_card_item"
                style="@style/PartialTextStyle"
                android:layout_width="25dp"
                android:layout_height="27dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/text_view_plus"
                android:textColor="@color/red_22"
                android:textSize="24sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_trash_card_item"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/trash" />
        </RelativeLayout>

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/layout_minus_add_count"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            android:outlineAmbientShadowColor="#DDDDDD"
            android:outlineSpotShadowColor="#DDDDDD" />


    </RelativeLayout>


</ScrollView>